--- a/ListItApp/Info.plist
+++ b/ListItApp/Info.plist
@@ -41,5 +41,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Proxima Nova Bold.otf</string>
+		<string>Proxima Nova Light.otf</string>
+		<string>Proxima Nova Regular.otf</string>
+	</array>
 </dict>
 </plist>
